testsuite/tests/warnings/should_compile/T23573B.hs
module T23573B where

{-# DEPRECATED deprec "deprec" #-}
deprec = ()
