testsuite/tests/warnings/should_fail/WarningCategoryModule.hs
module WarningCategoryModule {-# WARNING in "x-module-warning-42" "Module-level warning" #-} where

wurble :: ()
wurble = ()
